# rustynetics

./: Cargo.toml  README.md  alphabet.rs  genome.rs  range.rs
.github/workflows/: rust.yml
src/: alphabet.rs  bam.rs  bam_coverage.rs  bbi.rs  bgzf.rs  bigWig.rs  bigwig.rs  bigwig_map_plugin.rs  bigwig_test.rs  coverage.rs  cpg.rs  error.rs  fastq.rs  genes.rs  genes_expr.rs  genes_table.rs  genes_ucsc.rs  genome.rs  granges.rs  granges_bam.rs  granges_bed.rs  granges_bedgraph.rs  granges_bigwig.rs  granges_cpg.rs  granges_error.rs  granges_find_endpoint.rs  granges_find_nearest.rs  granges_find_overlaps.rs  granges_gtf.gtf  granges_gtf.rs  granges_merge.rs  granges_pretty.rs  granges_random.rs  granges_row.rs  granges_sort.rs  granges_table.rs  granges_table_reader.rs  granges_table_writer.rs  infologger.rs  kmer.rs  (+45 more)
tests/: test_bam_fastq.rs  test_bam_to_fastq.rs  test_bigwig.rs  test_genome.rs  test_granges.rs  test_granges_2.bed  test_meta.bed  test_meta.rs
tests/fixtures/: README.md
