[package]
name = "rustynetics"
version = "0.1.0"
edition = "2018"

[dependencies]
approx = "0.5.1"
flate2 = "1.0"
clap = { version = "4.3", features = ["derive"] }
regex = "1.10"
list_comprehension_macro = "0.1"
rand = "0.8.5"
mysql = "24.0.0"
num = "0.4"
byteorder = "1.5.0"
reqwest = { version = "0.11", features = ["blocking"] }
async-stream = "0.3.5"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
