[package]
name = "rustynetics"
version = "0.1.0"
edition = "2021"
authors = ["Philipp Benner"]
description = "A high-performance genomics libary specialized in handling BAM and BigWig files"
license = "MIT"
repository = "https://github.com/pbenner/rustynetics"
documentation = "https://docs.rs/rustynetics"
keywords = ["rust", "genomics", "bioinformatics"]
categories = ["command-line-utilities", "science", "data-structures"]

#[profile.release]
#debug = true

[dependencies]
approx = "0.5.1"
async-stream = "0.3.5"
byteorder = "1.5.0"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
flate2 = "1.0"
regex = "1.10"
list_comprehension_macro = "0.1"
mysql = "24.0.0"
num = "0.4"
plotters = "0.3.7"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
